--- a/index.html
+++ b/index.html
@@ -3,6 +3,16 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:title" content="Version control for sketch | Abstract" />
+		<meta
+			property="og:description"
+			content="Design together, in real-time with version control for Sketch. Collaborate in the same file at the same time, without losing the original."
+		/>
+		<meta
+			property="og:image"
+			content="https://assets-global.website-files.com/5ff3926f03b3ba26b7d639cb/60072932670653f1d2ab1afd_og-versions.jpg"
+		/>
+		<meta property="og:url" />
 		<title>Abstract</title>
 	</head>
 	<body></body>
