--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 			property="og:image"
 			content="https://assets-global.website-files.com/5ff3926f03b3ba26b7d639cb/60072932670653f1d2ab1afd_og-versions.jpg"
 		/>
-		<meta property="og:url" />
+		<meta property="og:url" content="https://help.abstract.com/hc/en-us" />
+		<meta property="og:locale" content="en_US" />
+
 		<title>Abstract</title>
 	</head>
 	<body></body>
