feat: Add the basic structure of the footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,61 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta property="og:title" content="Version control for sketch | Abstract" />
+		<meta
+			property="og:description"
+			content="Design together, in real-time with version control for Sketch. Collaborate in the same file at the same time, without losing the original."
+		/>
+		<meta
+			property="og:image"
+			content="https://assets-global.website-files.com/5ff3926f03b3ba26b7d639cb/60072932670653f1d2ab1afd_og-versions.jpg"
+		/>
+		<meta property="og:url" content="https://help.abstract.com/hc/en-us" />
+		<meta property="og:locale" content="en_US" />
+
 		<title>Abstract</title>
 	</head>
-	<body></body>
+	<body>
+		<footer>
+			<div class="footerInner">
+				<div class="footerAbstract">
+					<ul>
+						<li>Start Trial</li>
+						<li>Pricing</li>
+						<li>Download</li>
+					</ul>
+				</div>
+				<div class="footerResources">
+					<ul>
+						<li>Blog</li>
+						<li>Help Center</li>
+						<li>Release Notes</li>
+						<li>Status</li>
+					</ul>
+				</div>
+				<div class="footerCommunity">
+					<ul>
+						<li>Twitter</li>
+						<li>LinkedIn</li>
+						<li>Facebook</li>
+						<li>Dribbble</li>
+						<li>Podcast</li>
+					</ul>
+				</div>
+				<div class="footerCompany">
+					<ul>
+						<li>About Us</li>
+						<li>Careers</li>
+						<li>Legal</li>
+					</ul>
+				</div>
+				<div class="footerCopyright">
+					<div class="logo"></div>
+					<p>© Copyright 2023</p>
+					<p>Abstract Studio Design, Inc.</p>
+					<p>All rights reserved</p>
+				</div>
+			</div>
+		</footer>
+	</body>
 </html>
