feat: Add the contact info in the footer

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 						<li>Legal</li>
 					</ul>
 					<p><strong>Contact Us</strong></p>
+					<p>info@abstract.com</p>
 				</div>
 				<div class="footerCopyright">
 					<div class="logo"></div>
