--- a/index.html
+++ b/index.html
@@ -24,29 +24,16 @@
 					<img
 						src="//theme.zdassets.com/theme_assets/2197739/df1f3a3595ad6f2e809942c0cbfa85f84156dd61.svg"
 						alt="Logo"
-						class="logo"
 					/>
 				</a>
-				<a href="/hc/en-us">Help Center</a>
+				<a href="/">Help Center</a>
 			</div>
-			<div class="topbar__buttons">
-				<button
-					type="button"
-					class="tcon tcon-menu--xcross"
-					aria-label="toggle menu"
-					data-toggle-menu=""
-				>
-					<span class="tcon-menu__lines" aria-hidden="true"></span>
+			<div class="topbar-buttons">
+				<button type="button" class="submit">
 					<span> Submit a request</span>
 				</button>
-				<button
-					type="button"
-					class="tcon tcon-menu--xcross"
-					aria-label="toggle menu"
-					data-toggle-menu=""
-				>
-					<span class="tcon-menu__lines" aria-hidden="true"></span>
-					<span> sign in</span>
+				<button type="button" class="singin">
+					<span>Sign In</span>
 				</button>
 			</div>
 		</header>
