feat:add basic main structure

--- a/index.html
+++ b/index.html
@@ -1,95 +1,160 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta property="og:title" content="Version control for sketch | Abstract" />
-		<meta
-			property="og:description"
-			content="Design together, in real-time with version control for Sketch. Collaborate in the same file at the same time, without losing the original."
-		/>
-		<meta
-			property="og:image"
-			content="https://assets-global.website-files.com/5ff3926f03b3ba26b7d639cb/60072932670653f1d2ab1afd_og-versions.jpg"
-		/>
-		<meta property="og:url" content="https://help.abstract.com/hc/en-us" />
-		<meta property="og:locale" content="en_US" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Version control for sketch | Abstract" />
+    <meta
+      property="og:description"
+      content="Design together, in real-time with version control for Sketch. Collaborate in the same file at the same time, without losing the original."
+    />
+    <meta
+      property="og:image"
+      content="https://assets-global.website-files.com/5ff3926f03b3ba26b7d639cb/60072932670653f1d2ab1afd_og-versions.jpg"
+    />
+    <meta property="og:url" content="https://help.abstract.com/hc/en-us" />
+    <meta property="og:locale" content="en_US" />
 
-		<title>Abstract</title>
-	</head>
-	<body>
-		<header>
-			<div class="logo">
-				<a href="https://www.goabstract.com">
-					<img
-						src="//theme.zdassets.com/theme_assets/2197739/df1f3a3595ad6f2e809942c0cbfa85f84156dd61.svg"
-						alt="Logo"
-						class="logo"
-					/>
-				</a>
-				<a href="/hc/en-us">Help Center</a>
-			</div>
-			<div class="topbar__buttons">
-				<button
-					type="button"
-					class="tcon tcon-menu--xcross"
-					aria-label="toggle menu"
-					data-toggle-menu=""
-				>
-					<span class="tcon-menu__lines" aria-hidden="true"></span>
-					<span> Submit a request</span>
-				</button>
-				<button
-					type="button"
-					class="tcon tcon-menu--xcross"
-					aria-label="toggle menu"
-					data-toggle-menu=""
-				>
-					<span class="tcon-menu__lines" aria-hidden="true"></span>
-					<span> sign in</span>
-				</button>
-			</div>
-		</header>
-    		<footer>
-			<div class="footerInner">
-				<div class="footerAbstract">
-					<ul>
-						<li>Start Trial</li>
-						<li>Pricing</li>
-						<li>Download</li>
-					</ul>
-				</div>
-				<div class="footerResources">
-					<ul>
-						<li>Blog</li>
-						<li>Help Center</li>
-						<li>Release Notes</li>
-						<li>Status</li>
-					</ul>
-				</div>
-				<div class="footerCommunity">
-					<ul>
-						<li>Twitter</li>
-						<li>LinkedIn</li>
-						<li>Facebook</li>
-						<li>Dribbble</li>
-						<li>Podcast</li>
-					</ul>
-				</div>
-				<div class="footerCompany">
-					<ul>
-						<li>About Us</li>
-						<li>Careers</li>
-						<li>Legal</li>
-					</ul>
-				</div>
-				<div class="footerCopyright">
-					<div class="logo"></div>
-					<p>© Copyright 2023</p>
-					<p>Abstract Studio Design, Inc.</p>
-					<p>All rights reserved</p>
+    <title>Abstract</title>
+  </head>
+  <body>
+    <header>
+      <div class="logo">
+        <a href="https://www.goabstract.com">
+          <img
+            src="//theme.zdassets.com/theme_assets/2197739/df1f3a3595ad6f2e809942c0cbfa85f84156dd61.svg"
+            alt="Logo"
+            class="logo"
+          />
+        </a>
+        <a href="/hc/en-us">Help Center</a>
+      </div>
+	</header>
+      <div class="topbar__buttons">
+        <button
+          type="button"
+          class="tcon tcon-menu--xcross"
+          aria-label="toggle menu"
+          data-toggle-menu=""
+        >
+          <span class="tcon-menu__lines" aria-hidden="true"></span>
+          <span> Submit a request</span>
+        </button>
+        <button
+          type="button"
+          class="tcon tcon-menu--xcross"
+          aria-label="toggle menu"
+          data-toggle-menu=""
+        >
+          <span class="tcon-menu__lines" aria-hidden="true"></span>
+          <span> sign in</span>
+        </button>
+      </div>
+	  <section class="search_box">
+        <div> How can we help?</div>
+      <input>
+      <input type="submit" name="commit" value="Search"></form>
+        </div>
+	</section>
+
+
+    <div class="list-item">
+        <div>
+          <img
+            src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"
+          />
+        </div>
+        <div>
+          <div>
+            <h4>Using Abstract</h4>
+
+            <div>
+              Abstract lets you manage, version, and document your designs in
+              one place.
+            </div>
+            <a href="/hc/en-us/categories/360005436612-Using-Abstract"
+              >Learn More →</a>
+          </div>
+        </div>
+      </div>
+		<div class="list-icon">
+	<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png">
+		</div>
+		 <div class="list-block">
+			<div class="list-content">
+					<h4 class="list-tittle">Manage your account</h4>
+						<div class="list-desc">Configure your account settings, such as your email, profile details, and password.</div>
+						<a href="/hc/en-us/categories/360005449431-Manage-your-account">Learn More →</a>
 				</div>
 			</div>
+
+		<div class="list-item">
+			<div class="list-icon">
+			   <img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/50d0db451c0e1e66e1caddd142986fcf6792ca05.png">		
+			</div>
+				<div class="list-block">
+					<div class="list-content">
+						  <h4 class="list-title">Manage organizations, teams, and projects</h4>
+							<div class="list-desc">Use Abstract organizations, teams, and projects to organize your people and your work.</div>
+							<a href="/hc/en-us/categories/360005449531-Manage-organizations-teams-and-projects">Learn More →</a>
+						</div>
+					</div>
+			</div>
+
+			<div class="list-item">
+				<div class="list-icon">
+					<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png">
+				</div>
+				<div class="list-block">
+					<div class="list-content">
+						 <h4 class="list-title">Manage billing</h4>
+							<div class="list-desc">Change subscriptions and payment details.</div>
+								<a href="/hc/en-us/categories/360005436672-Manage-billing">Learn More →</a>
+							</div>
+						</div>
+					</div>
+
+	
+    <footer>
+      <div class="footerInner">
+        <div class="footerAbstract">
+          <ul>
+            <li>Start Trial</li>
+            <li>Pricing</li>
+            <li>Download</li>
+          </ul>
+        </div>
+        <div class="footerResources">
+          <ul>
+            <li>Blog</li>
+            <li>Help Center</li>
+            <li>Release Notes</li>
+            <li>Status</li>
+          </ul>
+        </div>
+        <div class="footerCommunity">
+          <ul>
+            <li>Twitter</li>
+            <li>LinkedIn</li>
+            <li>Facebook</li>
+            <li>Dribbble</li>
+            <li>Podcast</li>
+          </ul>
+        </div>
+        <div class="footerCompany">
+          <ul>
+            <li>About Us</li>
+            <li>Careers</li>
+            <li>Legal</li>
+          </ul>
+        </div>
+        <div class="footerCopyright">
+          <div class="logo"></div>
+          <p>© Copyright 2023</p>
+          <p>Abstract Studio Design, Inc.</p>
+          <p>All rights reserved</p>
+        </div>
+      </div>
     </footer>
-	</body>
+  </body>
 </html>
