--- a/index.html
+++ b/index.html
@@ -59,31 +59,25 @@
 
 
     <div class="list-item">
-        <div>
-          <img
-            src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"
-          />
+        <div class="list-icon">
+          <img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"/>
         </div>
-        <div>
-          <div>
-            <h4>Using Abstract</h4>
-
-            <div>
-              Abstract lets you manage, version, and document your designs in
-              one place.
-            </div>
-            <a href="/hc/en-us/categories/360005436612-Using-Abstract"
-              >Learn More →</a>
+        <div class="list-block">
+          <div class="list-content">
+            <h4 class="list-tittle">Using Abstract</h4>
+            <div class="list-desc">Abstract lets you manage, version, and document your designs in one place.</div>
+            <a href="/hc/en-us/categories/360005436612-Using-Abstract"> Learn More →</a>
           </div>
         </div>
       </div>
+	<div class="list-item">
 		<div class="list-icon">
-	<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png">
+			<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png">
 		</div>
-		 <div class="list-block">
+		<div class="list-block">
 			<div class="list-content">
-					<h4 class="list-tittle">Manage your account</h4>
-						<div class="list-desc">Configure your account settings, such as your email, profile details, and password.</div>
+				<h4 class="list-tittle">Manage your account</h4>
+					<div class="list-desc">Configure your account settings, such as your email, profile details, and password.</div>
 						<a href="/hc/en-us/categories/360005449431-Manage-your-account">Learn More →</a>
 				</div>
 			</div>
@@ -94,26 +88,52 @@
 			</div>
 				<div class="list-block">
 					<div class="list-content">
-						  <h4 class="list-title">Manage organizations, teams, and projects</h4>
+						  <h4 class="list-tittle">Manage organizations, teams, and projects</h4>
 							<div class="list-desc">Use Abstract organizations, teams, and projects to organize your people and your work.</div>
 							<a href="/hc/en-us/categories/360005449531-Manage-organizations-teams-and-projects">Learn More →</a>
 						</div>
 					</div>
 			</div>
 
-			<div class="list-item">
-				<div class="list-icon">
-					<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png">
+	<div class="list-item">
+		<div class="list-icon">
+			<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png">
+		</div>
+		<div class="list-block">
+			<div class="list-content">
+				 <h4 class="list-tittle">Manage billing</h4>
+					<div class="list-desc">Change subscriptions and payment details.</div>
+						<a href="/hc/en-us/categories/360005436672-Manage-billing">Learn More →</a>
+					</div>
 				</div>
-				<div class="list-block">
-					<div class="list-content">
-						 <h4 class="list-title">Manage billing</h4>
-							<div class="list-desc">Change subscriptions and payment details.</div>
-								<a href="/hc/en-us/categories/360005436672-Manage-billing">Learn More →</a>
+			</div>
+		
+	<div class="list-item">
+		<div class="list-icon">
+			<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/7712592465ef5c7bf18f1c7cb16e19ab44eb81e3.png">
+		</div>
+			<div class="list-block">
+				<div class="list-content">
+					<h4 class="list-tittle">Authenticate to Abstract</h4> 
+					<div class="list-desc">Set up and configure SSO, SCIM, and Just-in-Time provisioning.</div>
+						<a href="/hc/en-us/categories/360005436592-Authenticate-to-Abstract"> Learn More →</a>
+					</div>
+				</div>
+			</div>
+
+
+	<div class="list-item">
+		<div class="list-icon">
+			<img class="list-icon-img" src="//theme.zdassets.com/theme_assets/2197739/dcc25d18e224d12621d74e545cc8bdd1b5685ca8.png">
+		</div>
+			<div class="list-block">
+				<div class="list-content">
+				 <h4 class="list-tittle">Abstract support</h4>  
+						<div class="list-desc">Get in touch with a human.</div>
+							<a href="https://help.abstract.com/hc/en-us/articles/360050382291-Contact-Support">Learn More →</a>
 							</div>
 						</div>
-					</div>
-
+				</div>
 	
     <footer>
       <div class="footerInner">
