--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 							Abstract lets you manage, version, and document your designs in one
 							place.
 						</div>
-						<a href="/hc/en-us/categories/360005436612-Using-Abstract"> Learn More →</a>
+						<a href="/"> Learn More →</a>
 					</div>
 				</div>
 			</div>
@@ -76,9 +76,7 @@
 							Configure your account settings, such as your email, profile details,
 							and password.
 						</div>
-						<a href="/hc/en-us/categories/360005449431-Manage-your-account"
-							>Learn More →</a
-						>
+						<a href="/">Learn More →</a>
 					</div>
 				</div>
 
@@ -96,10 +94,7 @@
 								Use Abstract organizations, teams, and projects to organize your
 								people and your work.
 							</div>
-							<a
-								href="/hc/en-us/categories/360005449531-Manage-organizations-teams-and-projects"
-								>Learn More →</a
-							>
+							<a href="/">Learn More →</a>
 						</div>
 					</div>
 				</div>
@@ -115,9 +110,7 @@
 						<div class="list-content">
 							<h4 class="list-tittle">Manage billing</h4>
 							<div class="list-desc">Change subscriptions and payment details.</div>
-							<a href="/hc/en-us/categories/360005436672-Manage-billing"
-								>Learn More →</a
-							>
+							<a href="/">Learn More →</a>
 						</div>
 					</div>
 				</div>
@@ -135,9 +128,7 @@
 							<div class="list-desc">
 								Set up and configure SSO, SCIM, and Just-in-Time provisioning.
 							</div>
-							<a href="/hc/en-us/categories/360005436592-Authenticate-to-Abstract">
-								Learn More →</a
-							>
+							<a href="/"> Learn More →</a>
 						</div>
 					</div>
 				</div>
@@ -153,10 +144,7 @@
 						<div class="list-content">
 							<h4 class="list-tittle">Abstract support</h4>
 							<div class="list-desc">Get in touch with a human.</div>
-							<a
-								href="https://help.abstract.com/hc/en-us/articles/360050382291-Contact-Support"
-								>Learn More →</a
-							>
+							<a href="/">Learn More →</a>
 						</div>
 					</div>
 				</div>
