fix: Update some tag in main

--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
 		</header>
 		<main>
 			<section class="search_box">
-				<div>How can we help?</div>
-				<input />
+				<h1>How can we help?</h1>
 				<input type="submit" name="commit" value="Search" />
 			</section>
 
@@ -53,7 +52,7 @@
 				</div>
 				<div class="list-block">
 					<div class="list-content">
-						<h4 class="list-tittle">Using Abstract</h4>
+						<h3 class="list-tittle">Using Abstract</h3>
 						<div class="list-desc">
 							Abstract lets you manage, version, and document your designs in one
 							place.
@@ -71,7 +70,7 @@
 				</div>
 				<div class="list-block">
 					<div class="list-content">
-						<h4 class="list-tittle">Manage your account</h4>
+						<h3 class="list-tittle">Manage your account</h3>
 						<div class="list-desc">
 							Configure your account settings, such as your email, profile details,
 							and password.
@@ -89,7 +88,7 @@
 					</div>
 					<div class="list-block">
 						<div class="list-content">
-							<h4 class="list-tittle">Manage organizations, teams, and projects</h4>
+							<h3 class="list-tittle">Manage organizations, teams, and projects</h3>
 							<div class="list-desc">
 								Use Abstract organizations, teams, and projects to organize your
 								people and your work.
@@ -108,7 +107,7 @@
 					</div>
 					<div class="list-block">
 						<div class="list-content">
-							<h4 class="list-tittle">Manage billing</h4>
+							<h3 class="list-tittle">Manage billing</h3>
 							<div class="list-desc">Change subscriptions and payment details.</div>
 							<a href="/">Learn More →</a>
 						</div>
@@ -124,7 +123,7 @@
 					</div>
 					<div class="list-block">
 						<div class="list-content">
-							<h4 class="list-tittle">Authenticate to Abstract</h4>
+							<h3 class="list-tittle">Authenticate to Abstract</h3>
 							<div class="list-desc">
 								Set up and configure SSO, SCIM, and Just-in-Time provisioning.
 							</div>
@@ -142,7 +141,7 @@
 					</div>
 					<div class="list-block">
 						<div class="list-content">
-							<h4 class="list-tittle">Abstract support</h4>
+							<h2 class="list-tittle">Abstract support</h2>
 							<div class="list-desc">Get in touch with a human.</div>
 							<a href="/">Learn More →</a>
 						</div>
