feat(index): Add nav section

--- a/index.html
+++ b/index.html
@@ -18,6 +18,25 @@
 		<title>Abstract</title>
 	</head>
 	<body>
+		<nav>
+			<div class="logo">
+				<a href="https://www.goabstract.com">
+					<img
+						src="//theme.zdassets.com/theme_assets/2197739/df1f3a3595ad6f2e809942c0cbfa85f84156dd61.svg"
+						alt="Logo"
+					/>
+				</a>
+				<a href="/">Help Center</a>
+			</div>
+			<div class="topbar-buttons">
+				<button type="button" class="submit">
+					<span> Submit a request</span>
+				</button>
+				<button type="button" class="singin">
+					<span>Sign In</span>
+				</button>
+			</div>
+		</nav>
 		<header>
 			<h1>How can we help?</h1>
 			<input type="submit" name="commit" value="Search" />
