chore: add the style.css and linked it to the html

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		/>
 		<meta property="og:url" content="https://help.abstract.com/hc/en-us" />
 		<meta property="og:locale" content="en_US" />
-
+		<link rel="stylesheet" href="style.css" />
 		<title>Abstract</title>
 	</head>
 	<body>
