feat(nav): Add basic styling

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 						alt="Logo"
 					/>
 				</a>
-				<a href="/">Help Center</a>
+				<a class="help-center" href="/">Help Center</a>
 			</div>
 			<div class="topbar-buttons">
 				<button type="button" class="submit">
