fix(index): Fix the type of the input for the form on the header

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		</nav>
 		<header>
 			<h1>How can we help?</h1>
-			<input type="submit" name="commit" value="Search" />
+			<input type="search" name="commit" value="Search" />
 		</header>
 		<main>
 			<div class="list-item">
