fix(index): fix tag that was not closed

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 					</div>
 				</div>
 			</div>
-			<main class="list-item">
+			<div class="list-item">
 				<div class="list-icon">
 					<img
 						class="list-icon-img"
@@ -77,123 +77,123 @@
 						<a href="/">Learn More →</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="list-item">
-					<div class="list-icon">
-						<img
-							class="list-icon-img"
-							src="//theme.zdassets.com/theme_assets/2197739/50d0db451c0e1e66e1caddd142986fcf6792ca05.png"
-						/>
-					</div>
-					<div class="list-block">
-						<div class="list-content">
-							<h3 class="list-tittle">Manage organizations, teams, and projects</h3>
-							<div class="list-desc">
-								Use Abstract organizations, teams, and projects to organize your
-								people and your work.
-							</div>
-							<a href="/">Learn More →</a>
+			<div class="list-item">
+				<div class="list-icon">
+					<img
+						class="list-icon-img"
+						src="//theme.zdassets.com/theme_assets/2197739/50d0db451c0e1e66e1caddd142986fcf6792ca05.png"
+					/>
+				</div>
+				<div class="list-block">
+					<div class="list-content">
+						<h3 class="list-tittle">Manage organizations, teams, and projects</h3>
+						<div class="list-desc">
+							Use Abstract organizations, teams, and projects to organize your people
+							and your work.
 						</div>
+						<a href="/">Learn More →</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="list-item">
-					<div class="list-icon">
-						<img
-							class="list-icon-img"
-							src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
-						/>
-					</div>
-					<div class="list-block">
-						<div class="list-content">
-							<h3 class="list-tittle">Manage billing</h3>
-							<div class="list-desc">Change subscriptions and payment details.</div>
-							<a href="/">Learn More →</a>
-						</div>
+			<div class="list-item">
+				<div class="list-icon">
+					<img
+						class="list-icon-img"
+						src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
+					/>
+				</div>
+				<div class="list-block">
+					<div class="list-content">
+						<h3 class="list-tittle">Manage billing</h3>
+						<div class="list-desc">Change subscriptions and payment details.</div>
+						<a href="/">Learn More →</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="list-item">
-					<div class="list-icon">
-						<img
-							class="list-icon-img"
-							src="//theme.zdassets.com/theme_assets/2197739/7712592465ef5c7bf18f1c7cb16e19ab44eb81e3.png"
-						/>
-					</div>
-					<div class="list-block">
-						<div class="list-content">
-							<h3 class="list-tittle">Authenticate to Abstract</h3>
-							<div class="list-desc">
-								Set up and configure SSO, SCIM, and Just-in-Time provisioning.
-							</div>
-							<a href="/"> Learn More →</a>
+			<div class="list-item">
+				<div class="list-icon">
+					<img
+						class="list-icon-img"
+						src="//theme.zdassets.com/theme_assets/2197739/7712592465ef5c7bf18f1c7cb16e19ab44eb81e3.png"
+					/>
+				</div>
+				<div class="list-block">
+					<div class="list-content">
+						<h3 class="list-tittle">Authenticate to Abstract</h3>
+						<div class="list-desc">
+							Set up and configure SSO, SCIM, and Just-in-Time provisioning.
 						</div>
+						<a href="/"> Learn More →</a>
 					</div>
 				</div>
+			</div>
 
-				<div class="list-item">
-					<div class="list-icon">
-						<img
-							class="list-icon-img"
-							src="//theme.zdassets.com/theme_assets/2197739/dcc25d18e224d12621d74e545cc8bdd1b5685ca8.png"
-						/>
-					</div>
-					<div class="list-block">
-						<div class="list-content">
-							<h2 class="list-tittle">Abstract support</h2>
-							<div class="list-desc">Get in touch with a human.</div>
-							<a href="/">Learn More →</a>
-						</div>
+			<div class="list-item">
+				<div class="list-icon">
+					<img
+						class="list-icon-img"
+						src="//theme.zdassets.com/theme_assets/2197739/dcc25d18e224d12621d74e545cc8bdd1b5685ca8.png"
+					/>
+				</div>
+				<div class="list-block">
+					<div class="list-content">
+						<h2 class="list-tittle">Abstract support</h2>
+						<div class="list-desc">Get in touch with a human.</div>
+						<a href="/">Learn More →</a>
 					</div>
 				</div>
-			</main>
-			<footer>
-				<div class="footerInner">
-					<div class="footerAbstract">
-						<h3>Abstract</h3>
-						<ul>
-							<li>Start Trial</li>
-							<li>Pricing</li>
-							<li>Download</li>
-						</ul>
-					</div>
-					<div class="footerResources">
-						<h3>Resource</h3>
-						<ul>
-							<li>Blog</li>
-							<li>Help Center</li>
-							<li>Release Notes</li>
-							<li>Status</li>
-						</ul>
-					</div>
-					<div class="footerCommunity">
-						<h3>Community</h3>
-						<ul>
-							<li>Twitter</li>
-							<li>LinkedIn</li>
-							<li>Facebook</li>
-							<li>Dribbble</li>
-							<li>Podcast</li>
-						</ul>
-					</div>
-					<div class="footerCompany">
-						<h3>Company</h3>
-						<ul>
-							<li>About Us</li>
-							<li>Careers</li>
-							<li>Legal</li>
-						</ul>
-						<p><strong>Contact Us</strong></p>
-						<p>info@abstract.com</p>
-					</div>
-					<div class="footerCopyright">
-						<div class="logo"></div>
-						<p>© Copyright 2023</p>
-						<p>Abstract Studio Design, Inc.</p>
-						<p>All rights reserved</p>
-					</div>
-				</div>
-			</footer>
+			</div>
 		</main>
+		<footer>
+			<div class="footerInner">
+				<div class="footerAbstract">
+					<h3>Abstract</h3>
+					<ul>
+						<li>Start Trial</li>
+						<li>Pricing</li>
+						<li>Download</li>
+					</ul>
+				</div>
+				<div class="footerResources">
+					<h3>Resource</h3>
+					<ul>
+						<li>Blog</li>
+						<li>Help Center</li>
+						<li>Release Notes</li>
+						<li>Status</li>
+					</ul>
+				</div>
+				<div class="footerCommunity">
+					<h3>Community</h3>
+					<ul>
+						<li>Twitter</li>
+						<li>LinkedIn</li>
+						<li>Facebook</li>
+						<li>Dribbble</li>
+						<li>Podcast</li>
+					</ul>
+				</div>
+				<div class="footerCompany">
+					<h3>Company</h3>
+					<ul>
+						<li>About Us</li>
+						<li>Careers</li>
+						<li>Legal</li>
+					</ul>
+					<p><strong>Contact Us</strong></p>
+					<p>info@abstract.com</p>
+				</div>
+				<div class="footerCopyright">
+					<div class="logo"></div>
+					<p>© Copyright 2023</p>
+					<p>Abstract Studio Design, Inc.</p>
+					<p>All rights reserved</p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
