--- a/index.html
+++ b/index.html
@@ -42,108 +42,106 @@
 			<input type="search" name="commit" placeholder="Search" />
 		</header>
 		<main>
-			<div class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"
-					/>
-				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Using Abstract</h3>
-						<div class="list-desc">
-							Abstract lets you manage, version, and document your designs in one
-							place.
+			<div class="list-container">
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"
+						/>
+					</div>
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Using Abstract</h3>
+							<div class="list-desc">
+								Abstract lets you manage, version, and document your designs in one
+								place.
+							</div>
+							<a href="/"> Learn More →</a>
 						</div>
-						<a href="/"> Learn More →</a>
 					</div>
 				</div>
-			</div>
-			<div class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png"
-					/>
-				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Manage your account</h3>
-						<div class="list-desc">
-							Configure your account settings, such as your email, profile details,
-							and password.
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png"
+						/>
+					</div>
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Manage your account</h3>
+							<div class="list-desc">
+								Configure your account settings, such as your email, profile
+								details, and password.
+							</div>
+							<a href="/">Learn More →</a>
 						</div>
-						<a href="/">Learn More →</a>
 					</div>
 				</div>
-			</div>
-
-			<div class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/50d0db451c0e1e66e1caddd142986fcf6792ca05.png"
-					/>
-				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Manage organizations, teams, and projects</h3>
-						<div class="list-desc">
-							Use Abstract organizations, teams, and projects to organize your people
-							and your work.
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/50d0db451c0e1e66e1caddd142986fcf6792ca05.png"
+						/>
+					</div>
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Manage organizations, teams, and projects</h3>
+							<div class="list-desc">
+								Use Abstract organizations, teams, and projects to organize your
+								people and your work.
+							</div>
+							<a href="/">Learn More →</a>
 						</div>
-						<a href="/">Learn More →</a>
 					</div>
 				</div>
-			</div>
-
-			<div class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
-					/>
-				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Manage billing</h3>
-						<div class="list-desc">Change subscriptions and payment details.</div>
-						<a href="/">Learn More →</a>
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/3e82d0126e97d7b7c60a611d4e11b3c278d33743.png"
+						/>
 					</div>
-				</div>
-			</div>
-
-			<div class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/7712592465ef5c7bf18f1c7cb16e19ab44eb81e3.png"
-					/>
-				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Authenticate to Abstract</h3>
-						<div class="list-desc">
-							Set up and configure SSO, SCIM, and Just-in-Time provisioning.
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Manage billing</h3>
+							<div class="list-desc">Change subscriptions and payment details.</div>
+							<a href="/">Learn More →</a>
 						</div>
-						<a href="/"> Learn More →</a>
 					</div>
 				</div>
-			</div>
-
-			<div class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/dcc25d18e224d12621d74e545cc8bdd1b5685ca8.png"
-					/>
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/7712592465ef5c7bf18f1c7cb16e19ab44eb81e3.png"
+						/>
+					</div>
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Authenticate to Abstract</h3>
+							<div class="list-desc">
+								Set up and configure SSO, SCIM, and Just-in-Time provisioning.
+							</div>
+							<a href="/"> Learn More →</a>
+						</div>
+					</div>
 				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Abstract support</h3>
-						<div class="list-desc">Get in touch with a human.</div>
-						<a href="/">Learn More →</a>
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/dcc25d18e224d12621d74e545cc8bdd1b5685ca8.png"
+						/>
+					</div>
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Abstract support</h3>
+							<div class="list-desc">Get in touch with a human.</div>
+							<a href="/">Learn More →</a>
+						</div>
 					</div>
 				</div>
 			</div>
