--- a/index.html
+++ b/index.html
@@ -42,42 +42,43 @@
 			<input type="search" name="commit" placeholder="Search" />
 		</header>
 		<main>
-			<div class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"
-					/>
-				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Using Abstract</h3>
-						<div class="list-desc">
-							Abstract lets you manage, version, and document your designs in one
-							place.
+			<div class="list-container">
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/aed6500f4da41c641f3de5d96247eb6654e9c386.png"
+						/>
+					</div>
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Using Abstract</h3>
+							<div class="list-desc">
+								Abstract lets you manage, version, and document your designs in one
+								place.
+							</div>
+							<a href="/"> Learn More →</a>
 						</div>
-						<a href="/"> Learn More →</a>
 					</div>
 				</div>
-			</div>
-			<main class="list-item">
-				<div class="list-icon">
-					<img
-						class="list-icon-img"
-						src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png"
-					/>
-				</div>
-				<div class="list-block">
-					<div class="list-content">
-						<h3 class="list-tittle">Manage your account</h3>
-						<div class="list-desc">
-							Configure your account settings, such as your email, profile details,
-							and password.
+				<div class="list-item">
+					<div class="list-icon">
+						<img
+							class="list-icon-img"
+							src="//theme.zdassets.com/theme_assets/2197739/91588b3d042df901d9b941ccbb57af4f151401c7.png"
+						/>
+					</div>
+					<div class="list-block">
+						<div class="list-content">
+							<h3 class="list-tittle">Manage your account</h3>
+							<div class="list-desc">
+								Configure your account settings, such as your email, profile
+								details, and password.
+							</div>
+							<a href="/">Learn More →</a>
 						</div>
-						<a href="/">Learn More →</a>
 					</div>
 				</div>
-
 				<div class="list-item">
 					<div class="list-icon">
 						<img
@@ -96,7 +97,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="list-item">
 					<div class="list-icon">
 						<img
@@ -112,7 +112,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="list-item">
 					<div class="list-icon">
 						<img
@@ -130,7 +129,6 @@
 						</div>
 					</div>
 				</div>
-
 				<div class="list-item">
 					<div class="list-icon">
 						<img
@@ -140,60 +138,60 @@
 					</div>
 					<div class="list-block">
 						<div class="list-content">
-							<h2 class="list-tittle">Abstract support</h2>
+							<h3 class="list-tittle">Abstract support</h3>
 							<div class="list-desc">Get in touch with a human.</div>
 							<a href="/">Learn More →</a>
 						</div>
 					</div>
 				</div>
-			</main>
-			<footer>
-				<div class="footerInner">
-					<div class="footerAbstract">
-						<h3>Abstract</h3>
-						<ul>
-							<li>Start Trial</li>
-							<li>Pricing</li>
-							<li>Download</li>
-						</ul>
-					</div>
-					<div class="footerResources">
-						<h3>Resource</h3>
-						<ul>
-							<li>Blog</li>
-							<li>Help Center</li>
-							<li>Release Notes</li>
-							<li>Status</li>
-						</ul>
-					</div>
-					<div class="footerCommunity">
-						<h3>Community</h3>
-						<ul>
-							<li>Twitter</li>
-							<li>LinkedIn</li>
-							<li>Facebook</li>
-							<li>Dribbble</li>
-							<li>Podcast</li>
-						</ul>
-					</div>
-					<div class="footerCompany">
-						<h3>Company</h3>
-						<ul>
-							<li>About Us</li>
-							<li>Careers</li>
-							<li>Legal</li>
-						</ul>
-						<p><strong>Contact Us</strong></p>
-						<p>info@abstract.com</p>
-					</div>
-					<div class="footerCopyright">
-						<div class="logo"></div>
-						<p>© Copyright 2023</p>
-						<p>Abstract Studio Design, Inc.</p>
-						<p>All rights reserved</p>
-					</div>
-				</div>
-			</footer>
+			</div>
 		</main>
+		<footer>
+			<div class="footerInner">
+				<div class="footerAbstract">
+					<h3>Abstract</h3>
+					<ul>
+						<li>Start Trial</li>
+						<li>Pricing</li>
+						<li>Download</li>
+					</ul>
+				</div>
+				<div class="footerResources">
+					<h3>Resource</h3>
+					<ul>
+						<li>Blog</li>
+						<li>Help Center</li>
+						<li>Release Notes</li>
+						<li>Status</li>
+					</ul>
+				</div>
+				<div class="footerCommunity">
+					<h3>Community</h3>
+					<ul>
+						<li>Twitter</li>
+						<li>LinkedIn</li>
+						<li>Facebook</li>
+						<li>Dribbble</li>
+						<li>Podcast</li>
+					</ul>
+				</div>
+				<div class="footerCompany">
+					<h3>Company</h3>
+					<ul>
+						<li>About Us</li>
+						<li>Careers</li>
+						<li>Legal</li>
+					</ul>
+					<p><strong>Contact Us</strong></p>
+					<p>info@abstract.com</p>
+				</div>
+				<div class="footerCopyright">
+					<div class="logo"></div>
+					<p>© Copyright 2023</p>
+					<p>Abstract Studio Design, Inc.</p>
+					<p>All rights reserved</p>
+				</div>
+			</div>
+		</footer>
 	</body>
 </html>
