feat: Add menu for smaller screens

--- a/index.html
+++ b/index.html
@@ -79,7 +79,22 @@
 					<span>Sign In</span>
 				</button>
 			</div>
+			<button class="burger-menu" aria-controls="primary-navigation" aria-expanded="false">
+				<svg fill="white" class="hamburger" viewBox="0 0 100 100" width="50">
+					<rect class="line top" width="80" height="10" x="10" y="25" rx="5"></rect>
+					<rect class="line middle" width="80" height="10" x="10" y="45" rx="5"></rect>
+					<rect class="line bottom" width="80" height="10" x="10" y="65" rx="5"></rect>
+				</svg>
+			</button>
 		</nav>
+		<div class="menu-mobile-closed" id="nav">
+			<button class="submit-mobile">
+				<span> Submit a request</span>
+			</button>
+			<button type="button" class="singin-mobile">
+				<span>Sign In</span>
+			</button>
+		</div>
 		<header>
 			<div class="headerInner">
 				<h1>How can we help?</h1>
@@ -279,4 +294,5 @@
 			</div>
 		</footer>
 	</body>
+	<script src="script.js"></script>
 </html>
