fix(Script): fix menu script

--- a/index.html
+++ b/index.html
@@ -79,7 +79,12 @@
 					<span>Sign In</span>
 				</button>
 			</div>
-			<button class="burger-menu" aria-controls="primary-navigation" aria-expanded="false">
+			<button
+				class="burger-menu"
+				id="burger-menu"
+				aria-controls="primary-navigation"
+				aria-expanded="false"
+			>
 				<svg fill="white" class="hamburger" viewBox="0 0 100 100" width="50">
 					<rect class="line top" width="80" height="10" x="10" y="25" rx="5"></rect>
 					<rect class="line middle" width="80" height="10" x="10" y="45" rx="5"></rect>
