fix(html): Update class names for the menu-mobile

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 				</svg>
 			</button>
 		</nav>
-		<div class="menu-mobile-closed" id="nav">
+		<div class="menu-mobile" id="nav">
 			<button class="submit-mobile">
 				<span> Submit a request</span>
 			</button>
